# pantam

./: .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  test-pull-request.yml
cli/: __main__.py  action.py  cli.py  init.py  serve.py
cli/utils/: filesystem.py
example/: .pantamrc.json  example.py
example/actions/: index.py  other.py
example/domain/: .pantamrc.json  README.md  db  domain.py  entrypoint.py  pyproject.toml
example/domain/actions/: index.py
example/domain/domain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
example/event/: .pantamrc.json  README.md  event.py  pyproject.toml
example/event/actions/: index.py
example/event/event.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logo/: logo.ai
pantam/: __init__.py  pantam.py
pantam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pantam/cli/: __main__.py  action.py  init.py  serve.py
pantam/cli/utils/: __init__.py  filesystem.py  messages.py  templates.py
pantam/scripts/: action.py  cli.py  init.py  serve.py
pantam/scripts/utils/: errors.py  filesystem.py
pantam/services/: __init__.py  logger.py
pantam_cli/: action.py  cli.py  init.py  serve.py
pantam_cli/utils/: filesystem.py  templates.py
tests/pantam/: test_pantam.py
tests/pantam/cli/: test_filesystem.py
tests/pantam/services/: test_logger.py
