[tool.poetry]
name = "pantam"
version = "0.0.1"
description = "The microframework for microservices"
authors = ["Matt Davies <matt@filament.so>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
starlette = "^0.13.6"
colored = "^1.4.2"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autohooks = "^2.1.0"
pytest = "^5.4.3"
black = "^19.10b0"
autohooks-plugin-pylint = "^1.2.0"
autohooks-plugin-black = "^1.2.0"
mypy = "^0.782"
pytest-mock = "^3.2.0"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.pylint", "autohooks.plugins.black"]

[tool.autohooks.plugins.black]
arguments = ["--check"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

